--- a/pages/journey.html
+++ b/pages/journey.html
@@ -1,73 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="icon" href="../multimedia/Bandalos Icon.png">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../CSS/style.css" />
+  <link rel="icon" href="../multimedia/Bandalos Icon.png">
 
 
-    <title>Bandalos Chinos</title>
-  </head>
-  <body>
-    <!-- HEADER BEGINNING -->
-    <header>
-      <h1 class="logo">
-        This is <br />
-        Bandalos Chinos
-      </h1>
-      <nav class="nav">
-        <ul class="nav-ul">
-          <li>
-            <a href="../index.html" class="nav-link">Inicio</a>
-          </li>
-          <li>
-            <a href="../pages/about.html" class="nav-link">Nosotros</a>
-          </li>
-          <li>
-            <a href="../pages/historia.html" class="nav-link">Historia</a>
-          </li>
-          <li>
-            <a href="../pages/discografia.html" class="nav-link">Discografia</a>
-          </li>
-          <li>
-            <a href="../pages/journey.html" class="nav-link">Journey</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <!-- HEADER END -->
+  <title>Bandalos Chinos</title>
+</head>
 
-    <!-- MAIN BEGINNING -->
-    <main class="main-in">
-      <h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-        facere et unde dignissimos, odio laborum quibusdam eveniet quod alias,
-        ipsa fuga praesentium tempora eum ad aperiam minima veritatis. Maxime
-        architecto, ullam sequi accusamus facilis tempore ea illum repellendus
-        nisi sit deleniti cumque dicta laudantium eum fuga quia quibusdam
-        dignissimos vel?
-      </h2>
-    </main>
-    <!-- MAIN END -->
-
-    <!-- FOOTER BEGINNING -->
-    <footer class="footer">
-      <h2>Integrantes:</h2>
-      <p>
-        <ul>
-          <li>Gregorio Degano</li>
-          <li>Salvador Colombo</li>
-          <li>Tomás Verduga</li>
-          <li>Matías Verduga</li>
-          <li>Iñaki Colombo</li>
-          <li>Nicolás Rodríguez del Pozo</li>
+<body>
+  <!-- HEADER BEGINNING -->
+  <header>
+    <h1 class="logo">
+      This is <br />
+      Bandalos Chinos
+    </h1>
+    <nav class="nav">
+      <ul class="nav-ul">
+        <li>
+          <a href="../index.html" class="nav-link">Inicio</a>
+        </li>
+        <li>
+          <a href="../pages/about.html" class="nav-link">Nosotros</a>
+        </li>
+        <li>
+          <a href="../pages/historia.html" class="nav-link">Historia</a>
+        </li>
+        <li>
+          <a href="../pages/discografia.html" class="nav-link">Discografia</a>
+        </li>
+        <li>
+          <a href="../pages/journey.html" class="nav-link">Journey</a>
+        </li>
       </ul>
-      </p>
+    </nav>
+  </header>
+  <!-- HEADER END -->
 
-      <h3>Béccar, Argentina (2009)</h3>
-    </footer>
-    <!-- FOOTER END -->
-  </body>
+  <!-- MAIN BEGINNING -->
+  <main class="main-jour">
+    <h2>
+      Conoce un poco de nuestros viajes y toures </h2>
+
+    <section class="grid">
+      <div class="caja c1">
+        <img src="../multimedia/Bandalos disc 1.jpg" alt="">
+        <div class="caja__content">
+          <h2>Bandalos Chinos</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod labore reiciendis quasi natus porro!
+            Deleniti eos molestias totam incidunt asperiores aperiam debitis enim quis nam, quos fugit unde blanditiis
+            sed sapiente nesciunt ipsam aliquid deserunt!.</p>
+        </div>
+      </div>
+      <div class="caja c2">
+        <img src="../multimedia/Bandalos disc 2.jpg" alt="">
+        <div class="caja__content">
+          <h2>Bandalos Chinos</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia velit cupiditate at sed quos recusandae
+            dolorem ipsam asperiores aliquam repellendus.</p>
+        </div>
+      </div>
+      <div class="caja c3">
+        <img src="../multimedia/Bandalos disc 3.jpg" alt="">
+        <div class="caja__content">
+          <h2>Bandalos Chinos</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis consequatur soluta esse at quisquam et
+            eum quasi quod facere incidunt nulla, ut praesentium quidem ipsam sed vero velit excepturi porro. Repellat
+            molestiae corporis pariatur deleniti eaque quaerat error, ipsum recusandae!</p>
+        </div>
+      </div>
+      <div class="caja c4">
+        <img src="../multimedia/Bandalos disc 4.jpg" alt="">
+        <div class="caja__content">
+          <h2>Bandalos Chinos</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis est voluptatem impedit quaerat unde inventore, dolore exercitationem doloribus a illo itaque blanditiis, esse perspiciatis iste odit tenetur magnam dignissimos! Debitis sapiente soluta excepturi maxime labore.</p>
+        </div>
+      </div>
+      <div class="caja c5">
+        <div class="caja__content">
+          <h2>Bandalos Chinos</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia velit cupiditate at sed quos recusandae
+            dolorem ipsam asperiores aliquam repellendus.</p>
+        </div>
+        <img src="../multimedia/Bandalos disc 5.jpg" alt="">
+
+      </div>
+    </section>
+
+
+
+
+
+  </main>
+  <!-- MAIN END -->
+
+  <!-- FOOTER BEGINNING -->
+  <footer class="footer">
+    <h2>Integrantes:</h2>
+    <p>
+    <ul>
+      <li>Gregorio Degano</li>
+      <li>Salvador Colombo</li>
+      <li>Tomás Verduga</li>
+      <li>Matías Verduga</li>
+      <li>Iñaki Colombo</li>
+      <li>Nicolás Rodríguez del Pozo</li>
+    </ul>
+    </p>
+
+    <h3>Béccar, Argentina (2009)</h3>
+  </footer>
+  <!-- FOOTER END -->
+</body>
+
 </html>
