--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -42,25 +42,46 @@
   <!-- HEADER END -->
 
   <!-- MAIN BEGINNING -->
-  <main class="main-in">
+  <main class="main-disc">
     <h2>Descubre un poco de nuestra musica y la historia detras de cada album</h2>
 
-    <div class="spot1"><iframe style="border-radius:12px"
+    <section class="spot1"><iframe style="border-radius:12px"
         src="https://open.spotify.com/embed/album/6HZ9qdQUobF9C9ovVnRjNg?utm_source=generator" width="100%" height="352"
         frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio molestias tenetur et earum corrupti quisquam,
-        aspernatur atque ab eligendi nam.</p>
-    </div>
+      <div class="spot1-div">
+        <h1>BACH</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum fugiat maxime inventore similique repellat
+          placeat voluptatum nobis? Dolores alias magni voluptatem nisi! Non at, quis cum asperiores magni quo tenetur.
+        </p>
+      </div>
+    </section>
 
-    <div class="spot2">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio molestias tenetur et earum corrupti quisquam,
-        aspernatur atque ab eligendi nam.</p>
+    <section class="spot2">
+      <div class="spot2-div">
+        <h1>EL BIG BLUE</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum fugiat maxime inventore similique repellat
+          placeat voluptatum nobis? Dolores alias magni voluptatem nisi! Non at, quis cum asperiores magni quo tenetur.
+        </p>
+      </div>
       <iframe style="border-radius:12px"
-      src="https://open.spotify.com/embed/album/1K6DMhbzgcx1T8e4HPnOX4?utm_source=generator" width="100%" height="352"
-      frameBorder="0" allowfullscreen=""
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </div>
+        src="https://open.spotify.com/embed/album/1K6DMhbzgcx1T8e4HPnOX4?utm_source=generator" width="100%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </section>
+
+    <section class="spot3">
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/album/57J6aB2ryzyHB7Ds5Oloan?utm_source=generator" width="100%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <div class="spot3-div">
+        <h1>FELIZ NAVIBACH</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum fugiat maxime inventore similique repellat
+          placeat voluptatum nobis? Dolores alias magni voluptatem nisi! Non at, quis cum asperiores magni quo tenetur.
+        </p>
+      </div>
+    </section>
   </main>
   <!-- MAIN END -->
 
