--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -45,7 +45,8 @@
   <main class="main-disc">
     <h2>Descubre un poco de nuestra musica y la historia detras de cada album</h2>
 
-    <section class="spot1"><iframe style="border-radius:12px"
+    <section class="spot1">
+      <iframe style="border-radius:12px"
         src="https://open.spotify.com/embed/album/6HZ9qdQUobF9C9ovVnRjNg?utm_source=generator" width="100%" height="352"
         frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
