--- a/index.html
+++ b/index.html
@@ -5,64 +5,79 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./CSS/style.css" />
   <link rel="icon" href="./multimedia/Bandalos Icon.png">
   <!-- Link a BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="./CSS/style.css">
 
   <title>Bandalos Chinos</title>
 </head>
 
-<body>
-  <!-- HEADER BEGINNING -->
-  <header>
-    <h1 class="logo">
-      This is <br />
-      Bandalos Chinos
-    </h1>
-    <nav class="nav">
-      <ul class="nav-ul">
-        <li>
-          <a href="index.html" class="nav-link">Inicio</a>
-        </li>
-        <li>
-          <a href="./pages/about.html" class="nav-link">Nosotros</a>
-        </li>
-        <li>
-          <a href="./pages/historia.html" class="nav-link">Historia</a>
-        </li>
-        <li>
-          <a href="./pages/discografia.html" class="nav-link">Discografia</a>
-        </li>
-        <li>
-          <a href="./pages/journey.html" class="nav-link">Journey</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <!-- HEADER END -->
+<body class="body-ind">
+  <section class="sect-main">
+    <!-- HEADER BEGINNING -->
+    <header>
+      <div class="logo">This is Bandalos Chinos</div>
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Bandalos Chinos</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/about.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/historia.html">Historia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/discografia.html">Discografia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/journey.html">Around the world</a>
+              </li>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- HEADER END -->
 
-  <!-- MAIN BEGINNING -->
-  <main class="main-in">
-    <h2>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-      facere et unde dignissimos, odio laborum quibusdam eveniet quod alias,
-      ipsa fuga praesentium tempora eum ad aperiam minima veritatis. Maxime
-      architecto, ullam sequi accusamus facilis tempore ea illum repellendus
-      nisi sit deleniti cumque dicta laudantium eum fuga quia quibusdam
-      dignissimos vel?
-    </h2>
-    <h2>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-      facere et unde dignissimos, odio laborum quibusdam eveniet quod alias,
-      ipsa fuga praesentium tempora eum ad aperiam minima veritatis. Maxime
-      architecto, ullam sequi accusamus facilis tempore ea illum repellendus
-      nisi sit deleniti cumque dicta laudantium eum fuga quia quibusdam
-      dignissimos vel?
-    </h2>
-  </main>
+    <!-- MAIN BEGINNING -->
+    <main class="main-in">
+      <div class="img1-ind">
+        <img src="./multimedia/Bandalos fondo index.jpg" alt="bandalos de fondo">
+        <div><p>Bandalos Chinos es una banda de indie pop nacida en 2009 con origen en la ciudad de Beccar (al norte de la
+          provincia de Buenos Aires), Argentina. Está integrada por Gregorio Degano (voz), Salvador Colombo
+          (sintetizadores), Tomás Verduga (guitarra y coros), Matías Verduga (batería y percusión), Iñaki Colombo
+          (guitarras y sintetizadores) y Nicolás Rodríguez del Pozo (bajo)
+        </p>
+        <h1>Inicios y disco debut (2009-2013)
+        </h1>
+        <p>Iñaki Colombo y Gregorio "Goyo" Degano se conocieron en el colegio en San Fernando y tocan juntos desde los
+          catorce años.2​ Cuando terminaron el secundario en 2009, armaron Bandalos Chinos en la ciudad de Beccar, en la
+          zona norte del Gran Buenos Aires.3​ Su primer disco fue editado en 2012 y llevó el nombre de la banda, siendo
+          presentado en el Auditorium San Isidro el 26 de octubre de ese mismo año. Aunque según declaraciones de la
+          banda, es un disco que sienten que no los representa, la banda contaba con una formación diferente; solo está
+          disponible en Bandcamp y en formato físico.</p>
+      </div>
+    </div>
+
+      <h1>Nunca estuve acá y En el aire (2014-2016)
+      </h1>
+
+
+    </main>
+  </section>
   <!-- MAIN END -->
 
   <!-- FOOTER BEGINNING -->
