--- a/pages/historia.html
+++ b/pages/historia.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Link a BOOSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="icon" href="../multimedia/Bandalos Icon.png">
 
@@ -16,24 +19,36 @@
       <h1 class="logo">
         This is <br />
         Bandalos Chinos
-      </h1>      <nav class="nav">
-        <ul class="nav-ul">
-          <li>
-            <a href="../index.html" class="nav-link">Inicio</a>
-          </li>
-          <li>
-            <a href="../pages/about.html" class="nav-link">Nosotros</a>
-          </li>
-          <li>
-            <a href="../pages/historia.html" class="nav-link">Historia</a>
-          </li>
-          <li>
-            <a href="../pages/discografia.html" class="nav-link">Discografia</a>
-          </li>
-          <li>
-            <a href="../pages/journey.html" class="nav-link">Journey</a>
-          </li>
-        </ul>
+      </h1> 
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/about.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/historia.html">Historia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/journey.html">Around the world</a>
+              </li>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <!-- HEADER END -->
@@ -68,5 +83,9 @@
       <h3>Béccar, Argentina (2009)</h3>
     </footer>
     <!-- FOOTER END -->
+    <!-- BOOSTRAP -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+  crossorigin="anonymous"></script>
   </body>
 </html>
