3ra entrega - update

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,90 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Link a BOOSTRAP -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Link a BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="icon" href="../multimedia/Bandalos Icon.png">
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="../CSS/style.css" />
+  <link rel="icon" href="../multimedia/Bandalos Icon.png">
 
-    <title>Bandalos Chinos</title>
-  </head>
-  <body>
-    <!-- HEADER BEGINNING -->
-    <header>
-      <h1 class="logo">
-        This is <br />
-        Bandalos Chinos
-      </h1>
-      <nav class="navbar navbar-expand-lg bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/about.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/historia.html">Historia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/journey.html">Around the world</a>
-              </li>
-              </li>
-            </ul>
-          </div>
+  <title>Bandalos Chinos</title>
+</head>
+
+<body>
+  <!-- HEADER BEGINNING -->
+  <header>
+    <div class="logo"></div>
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/about.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/historia.html">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/journey.html">Around the world</a>
+            </li>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <!-- HEADER END -->
+      </div>
+    </nav>
+  </header>
+  <!-- HEADER END -->
 
-    <!-- MAIN BEGINNING -->
-    <main class="main-in">
-      <h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-        facere et unde dignissimos, odio laborum quibusdam eveniet quod alias,
-        ipsa fuga praesentium tempora eum ad aperiam minima veritatis. Maxime
-        architecto, ullam sequi accusamus facilis tempore ea illum repellendus
-        nisi sit deleniti cumque dicta laudantium eum fuga quia quibusdam
-        dignissimos vel?
-      </h2>
-    </main>
-    <!-- MAIN END -->
+  <!-- MAIN BEGINNING -->
+  <main class="main-in">
+    <div class="abimg1">
+      <img src="../multimedia/about-goyo.jpg" alt="bandalos de fondo">
+      <div>
+        <h1>Goyo Degano</h1>
+        <p>Goyo Degano es el cantante de Bandalos Chinos, uno de los grupos referentes del nuevo pop argentino y
+          protagonista de la primera fecha de La Nueva Generación en 2019, junto al chileno Francisco Victoria. Degano
+          es, además, un frontman carismático y con estilo propio, que aporta dinamismo escénico a una banda cada vez
+          más sólida sobre el escenario. A continuación, algunas preguntas para conocer su costado más vinculado a la
+          estética y la imagen.
+        </p>
+      </div>
+    </div>
+    
+    <hr>
+    <hr>
 
-    <!-- FOOTER BEGINNING -->
-    <footer class="footer">
-      <h2>Integrantes:</h2>
-      <p>
-        <ul>
-          <li>Gregorio Degano</li>
-          <li>Salvador Colombo</li>
-          <li>Tomás Verduga</li>
-          <li>Matías Verduga</li>
-          <li>Iñaki Colombo</li>
-          <li>Nicolás Rodríguez del Pozo</li>
-      </ul>
-      </p>
+    <div class="abimg2">
+      <div>
+        <h1>Goyo Degano</h1>
+        <p>Goyo Degano es el cantante de Bandalos Chinos, uno de los grupos referentes del nuevo pop argentino y
+          protagonista de la primera fecha de La Nueva Generación en 2019, junto al chileno Francisco Victoria. Degano
+          es, además, un frontman carismático y con estilo propio, que aporta dinamismo escénico a una banda cada vez
+          más sólida sobre el escenario. A continuación, algunas preguntas para conocer su costado más vinculado a la
+          estética y la imagen.
+        </p>
+      </div>
+      <img src="../multimedia/Salvador Colombo.jpg" alt="bandalos de fondo">
+    </div>
+  </main>
+  <!-- MAIN END -->
 
-      <h3>Béccar, Argentina (2009)</h3>
-    </footer>
-    <!-- FOOTER END -->
-    <!-- BOOSTRAP -->
+  <!-- FOOTER BEGINNING -->
+  <footer class="footer">
+    <h2>Integrantes:</h2>
+    <p>
+    <ul>
+      <li>Gregorio Degano</li>
+      <li>Salvador Colombo</li>
+      <li>Tomás Verduga</li>
+      <li>Matías Verduga</li>
+      <li>Iñaki Colombo</li>
+      <li>Nicolás Rodríguez del Pozo</li>
+    </ul>
+    </p>
+
+    <h3>Béccar, Argentina (2009)</h3>
+  </footer>
+  <!-- FOOTER END -->
+  <!-- BOOSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-  crossorigin="anonymous"></script>
-  </body>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
