--- a/pages/historia.html
+++ b/pages/historia.html
@@ -16,10 +16,7 @@
   <body>
     <!-- HEADER BEGINNING -->
     <header>
-      <h1 class="logo">
-        This is <br />
-        Bandalos Chinos
-      </h1> 
+      <div class="logo"></div>
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
