--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -19,33 +19,34 @@
   <!-- HEADER BEGINNING -->
   <header>
     <div class="logo"></div>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-md bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-          aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../pages/about.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../pages/historia.html">Historia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../pages/journey.html">Around the world</a>
-            </li>
-            </li>
-          </ul>
+        <div class="nav-links">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/about.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/historia.html">Historia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/journey.html">Around the world</a>
+              </li>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
