3ra entrega - update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ETIQUETAS SEO -->
+    <!-- Primary Meta Tags -->
+    <title>Bandalos Chinos</title>
+    <meta name="title" content="Bandalos Chinos" />
+    <meta
+      name="description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/"
+    />
+    <meta property="og:title" content="Bandalos Chinos" />
+    <meta
+      property="og:description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+    <meta property="og:image" href="./multimedia/Bandalos fondo index.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+    <meta property="twitter:title" content="Bandalos Chinos" />
+    <meta
+      property="twitter:description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+    <meta
+      property="twitter:image"
+      href="./multimedia/Bandalos fondo index.jpg"
+    />
     <link rel="icon" href="./multimedia/Bandalos Icon.png" />
     <!-- Link a BOOSTRAP -->
     <link
@@ -33,7 +67,7 @@
             </ul>
           </nav>
         </div>
-        <video muted autoplay loop>
+        <video autoplay loop>
           <source
             src="./multimedia/Bandalos Chinos - Una Propuesta (Lyric Video).mp4"
             type="video/mp4"
