--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,41 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- ETIQUETAS SEO -->
+    <!-- Primary Meta Tags -->
+    <title>Bandalos Chinos</title>
+    <meta name="title" content="Bandalos Chinos" />
+    <meta
+      name="description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/"
+    />
+    <meta property="og:title" content="Bandalos Chinos" />
+    <meta
+      property="og:description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+    <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+    <meta property="twitter:title" content="Bandalos Chinos" />
+    <meta
+      property="twitter:description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+    <meta
+      property="twitter:image"
+      href="../multimedia/Bandalos fondo index.jpg"
+    />
+    <link rel="icon" href="./multimedia/Bandalos Icon.png" />
   <!-- Link a BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -70,7 +105,7 @@
 
     <div class="abimg2">
       <div>
-        <h1>Goyo Degano</h1>
+        <h1>Iñaki Colombo</h1>
         <p>Goyo Degano es el cantante de Bandalos Chinos, uno de los grupos referentes del nuevo pop argentino y
           protagonista de la primera fecha de La Nueva Generación en 2019, junto al chileno Francisco Victoria. Degano
           es, además, un frontman carismático y con estilo propio, que aporta dinamismo escénico a una banda cada vez
@@ -79,6 +114,54 @@
         </p>
       </div>
       <img src="../multimedia/Salvador Colombo.jpg" alt="bandalos de fondo">
+    </div>
+
+    <hr>
+    <hr>
+
+    <div class="abimg3">
+      <img src="../multimedia/Tomas verduga.jpg" alt="bandalos de fondo">
+      <div>
+        <h1>Tomas Verduga</h1>
+        <p>Goyo Degano es el cantante de Bandalos Chinos, uno de los grupos referentes del nuevo pop argentino y
+          protagonista de la primera fecha de La Nueva Generación en 2019, junto al chileno Francisco Victoria. Degano
+          es, además, un frontman carismático y con estilo propio, que aporta dinamismo escénico a una banda cada vez
+          más sólida sobre el escenario. A continuación, algunas preguntas para conocer su costado más vinculado a la
+          estética y la imagen.
+        </p>
+      </div>
+    </div>
+
+    <hr>
+    <hr>
+
+    <div class="abimg4">
+      <div>
+        <h1>Salvador Colombo</h1>
+        <p>Goyo Degano es el cantante de Bandalos Chinos, uno de los grupos referentes del nuevo pop argentino y
+          protagonista de la primera fecha de La Nueva Generación en 2019, junto al chileno Francisco Victoria. Degano
+          es, además, un frontman carismático y con estilo propio, que aporta dinamismo escénico a una banda cada vez
+          más sólida sobre el escenario. A continuación, algunas preguntas para conocer su costado más vinculado a la
+          estética y la imagen.
+        </p>
+      </div>
+      <img src="../multimedia/Salvado colombo.jpg" alt="bandalos de fondo">
+    </div>
+
+    <hr>
+    <hr>
+
+    <div class="abimg5">
+      <img src="../multimedia/Matias verduga.jpg" alt="bandalos de fondo">
+      <div>
+        <h1>Matias Verduga</h1>
+        <p>Goyo Degano es el cantante de Bandalos Chinos, uno de los grupos referentes del nuevo pop argentino y
+          protagonista de la primera fecha de La Nueva Generación en 2019, junto al chileno Francisco Victoria. Degano
+          es, además, un frontman carismático y con estilo propio, que aporta dinamismo escénico a una banda cada vez
+          más sólida sobre el escenario. A continuación, algunas preguntas para conocer su costado más vinculado a la
+          estética y la imagen.
+        </p>
+      </div>
     </div>
   </main>
   <!-- MAIN END -->
