--- a/pages/historia.html
+++ b/pages/historia.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ETIQUETAS SEO -->
+    <!-- Primary Meta Tags -->
+    <title>Bandalos Chinos</title>
+    <meta name="title" content="Bandalos Chinos" />
+    <meta
+      name="description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/"
+    />
+    <meta property="og:title" content="Bandalos Chinos" />
+    <meta
+      property="og:description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+    <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+    <meta property="twitter:title" content="Bandalos Chinos" />
+    <meta
+      property="twitter:description"
+      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
+    />
+    <meta
+      property="twitter:image"
+      href="../multimedia/Bandalos fondo index.jpg"
+    />
+    <link rel="icon" href="./multimedia/Bandalos Icon.png" />
     <!-- Link a BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -51,7 +86,7 @@
     <!-- HEADER END -->
 
     <!-- MAIN BEGINNING -->
-    <main class="main-in">
+    <main class="main-hist">
       <h2>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
         facere et unde dignissimos, odio laborum quibusdam eveniet quod alias,
