3ra entrega - update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+    <meta
+      property="twitter:url"
+      content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/"
+    />
     <meta property="twitter:title" content="Bandalos Chinos" />
     <meta
       property="twitter:description"
@@ -57,19 +60,24 @@
       <main class="main-in">
         <div>
           <nav class="navbar">
-            <a class="bandaloslogo" href="index.html">Bandalos Chinos</a>
+            <a
+              class="bandaloslogo"
+              href="https://www.instagram.com/bandaloschinos/?hl=es"
+              target="_blank"
+              >Bandalos Chinos</a
+            >
             <ul>
               <li><a href="index.html">Inicio</a></li>
               <li><a href="./pages/about.html">Nosotros</a></li>
               <li><a href="./pages/historia.html">Historia</a></li>
               <li><a href="./pages/discografia.html">Discografia</a></li>
-              <li><a href="./pages/journey.html">Around the world</a></li>
+              <li><a href="./pages/touring.html">Touring</a></li>
             </ul>
           </nav>
         </div>
         <video autoplay loop>
           <source
-            src="./multimedia/Bandalos Chinos - Una Propuesta (Lyric Video).mp4"
+            src="./multimedia/Bandalos Chinos - La Final.mp4"
             type="video/mp4"
           />
         </video>
