--- a/pages/about.html
+++ b/pages/about.html
@@ -75,7 +75,7 @@
               <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../pages/journey.html">Around the world</a>
+              <a class="nav-link active" aria-current="page" href="../pages/touring.html">Touring</a>
             </li>
             </li>
           </ul>
