--- a/pages/historia.html
+++ b/pages/historia.html
@@ -55,9 +55,8 @@
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -75,7 +74,7 @@
                 <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/journey.html">Around the world</a>
+                <a class="nav-link active" aria-current="page" href="../pages/touring.html">Touring</a>
               </li>
               </li>
             </ul>
